k8s/deploy.yml
apiVersion: v1
kind: Pod
metadata:
  name: "doye-pod"
  namespace: default
  labels:
    app: "doye-pod"
spec:
  containers:
  - name: doye-server01
    image: "tolani98/doye:1.0"
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    # env:
    # - name: DB_HOST
    #   valueFrom:
    #     configMapKeyRef:
    #       name: MYAPP
    #       key: DB_HOST
    ports:
    - containerPort:  8991
  restartPolicy: Always
